--- a/css/styles.css
+++ b/css/styles.css
@@ -3,16 +3,24 @@ body, html {
     margin: 0;
     width: 100vw;
     height: 100vh;
+    box-sizing: border-box;
 }
 
 body {
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 20vw 80vw;
 }
 
 a {
     text-decoration: none;
     color: white;
+}
+
+.sidebar {
+    background-color: brown;
+    color:white;
+    display: grid;
+    grid-template-rows: 15vh 50vh 15vh;
 }
 
 .logo {
@@ -28,27 +36,151 @@ a {
 
 .navigation {
     display:grid;
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: repeat(6, 60px);
 }
 
 .navigation-item {
     font-size: 24px;
     margin: 10px;
     font-weight: bold;
-    /* display: flex;
-    gap: 20px; */
+    display: inline-block;
 }
 
-.sidebar {
-    background-color: brown;
-    color:white;
-    display: grid;
-    grid-template-rows: 1fr 3fr 2fr 4fr;
-    gap: 40px;
-}
 
 .material-symbols-outlined {
     margin-right: 30px;
-    height:24px;
+}
+
+.main-content {
+    display:grid;
+    grid-template: 20vh 80vh / 5fr 1fr;
+}
+
+
+
+.header {
+    display:grid;
+    grid-column: 1 / 3;
+    grid-row: 1;
+    grid-template-rows: 1fr 2fr;
+    background-color: rgb(49, 43, 43);
+    color: white;
+}
+
+.top-header {
+    display:grid;
+    grid-template: 1fr / 8fr 3fr;
+    align-items: center;
+}
+
+#searchbar-container {
+    margin: 30px;
     display:flex;
+    align-items: center;
+}
+
+.searchbar {
+    width: 40vw;
+    height: 30px;
+    border-radius: 10px;
+    margin-left: -25px;
+    border-color: rgb(250, 96, 96);
+    color: brown;
+    font-weight: bold;
+    font-size: 20px;;
+}
+
+.searchbar:focus {
+    background-color: rgb(202, 187, 187);
+    border-color: brown;
+    transition: 0.5s;
+}
+
+.search-button {
+    height: 30px;
+    width: 70px;
+    border-radius: 10px;
+    background-color: rgb(179, 87, 87);
+    color:white;
+}
+
+.search-button:hover, 
+.post-buttons button:hover {
+    background-color: rgb(243, 142, 142);
+    transition: 0.3s;
+}
+
+.search-button:active, 
+.post-buttons button:active {
+    background-color: brown;
+    transition: 0.2s;
+}
+
+.account {
+    display:grid;
+    grid-template-columns: 50px 60px 1fr;
+    align-items: center;
+}
+
+.profile-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+}
+
+.name {
+    font-size: 20px;
+}
+
+.big-name {
+    font-size: 32px;
+    font-weight: bold;
+}
+
+button {
+    border:none;
+    outline: none;
+}
+
+.bottom-header {
+    display:grid;
+    grid-template: 1fr / 1fr 4fr 4fr;
+    align-items: center;
+}
+
+.bottom-header .profile-image {
+    width: 70px;
+    height: 70px;
+    margin-left: 30px;
+}
+
+.post-buttons {
+    display: grid;
+    grid-template: 1fr / 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: end;
+}
+
+.post-buttons button {
+    width: 100px;
+    height: 40px;
+    background-color: rgb(179, 87, 87);
+    border-radius: 20px;
+}
+
+
+
+
+
+
+
+
+.posts-container {
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+
+.interesting-stuff {
+    grid-row: 2;
+    grid-column: 2;
 }
