--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ a {
     background-color: brown;
     color:white;
     display: grid;
+    max-width: 310px;
+    min-width: 210px;
     grid-template-rows: 15vh 50vh 15vh;
 }
 
@@ -55,8 +57,6 @@ a {
     display:grid;
     grid-template: 20vh 80vh / 5fr 1fr;
 }
-
-
 
 .header {
     display:grid;
@@ -168,19 +168,45 @@ button {
     border-radius: 20px;
 }
 
+.main {
+    display: grid;
+    grid-column: 1 / 3;
+    grid-template-columns: 3fr 1fr;
+}
 
+.posts-and-title {
+    display:grid;
+    grid-template-rows: 30px 1fr;
+}
 
-
-
-
+.container-title {
+    grid-row: 1;
+    font-size: 32px;
+    margin: 10px;
+    font-weight: bold;
+}
 
 
 .posts-container {
-    grid-row: 2/3;
-    grid-column: 1/2;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 3fr));
+    gap: 20px;
+    margin: 20px;
+}
+
+.post {
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(194, 64, 64);
+}
+
+.post-title {
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .interesting-stuff {
-    grid-row: 2;
     grid-column: 2;
 }
