--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,7 @@ button {
     grid-column: 1 / 3;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1rem;
+    overflow:hidden;
 }
 
 .posts-and-title {
@@ -236,7 +237,7 @@ button {
     background-color: red;
     margin: 2px;
     padding: 15px;
-    height: 80px;
+    height: 60px;
     border-radius: 10px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -244,7 +245,16 @@ button {
     text-overflow: ellipsis;
 }
 
-
 .announce-post .post-title {
     font-size: 16px;
+}
+
+.trending{
+    display: grid;
+    grid-template-rows: 1fr 6fr;
+}
+
+.trending-container{
+    display:grid;
+    grid-template-rows: repeat(4, 1fr);
 }
