--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,6 @@ button {
     grid-column: 1 / 3;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1rem;
-    overflow:hidden;
 }
 
 .posts-and-title {
@@ -237,7 +236,7 @@ button {
     background-color: red;
     margin: 2px;
     padding: 15px;
-    height: 60px;
+    height: 58px;
     border-radius: 10px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -257,4 +256,21 @@ button {
 .trending-container{
     display:grid;
     grid-template-rows: repeat(4, 1fr);
+    margin: 10px;
+}
+
+.trend-post {
+    background-color: rgb(78, 70, 70);
+    border-radius: 10px;
+    font-size: 20px;
+    border-bottom: solid black 2px;
+    padding-top: 10px;
+    padding-left: 10px;
+}
+
+.autor {
+    display: flex;
+    justify-content: end;
+    font-size: 13px;
+    font-style: italic;
 }
